# miniseed-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROMPT.md  README.md
.github/workflows/: ci.yml
benches/: codec.rs
pyscripts/: pyproject.toml
pyscripts/src/pyscripts/: __main__.py  generate_vectors.py
pyscripts/test_vectors/: header_vectors.json  mixed_record_vectors.json  mixed_v2v3_vectors.json  record_4096_vectors.json  roundtrip_vectors.json  steim1_vectors.json  steim2_vectors.json  uncompressed_vectors.json  v3_crc_vectors.json  v3_header_vectors.json  v3_roundtrip_vectors.json  v3_steim1_vectors.json  v3_steim2_vectors.json  v3_uncompressed_vectors.json
src/: crc.rs  decode.rs  decode_v3.rs  encode.rs  encode_v3.rs  error.rs  lib.rs  reader.rs  record.rs  sid.rs  steim.rs  time.rs  types.rs
tests/: api_smoke.rs
