[package]
name = "miniseed-rs"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure Rust miniSEED v2 and v3 decoder and encoder"
repository = "https://github.com/luhtfiimanal/miniseed-rs"
readme = "README.md"
keywords = ["seismic", "miniseed", "steim", "mseed", "fdsn"]
categories = ["encoding", "parser-implementations", "science"]
exclude = ["pyscripts/", "CLAUDE.md", "PROMPT.md"]

[dependencies]
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "codec"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
